--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,19 @@
 <h1>
   {{title}}
 </h1>
+
+<button pButton type="button" label="Click"></button>
+
+<div class="ui-g">
+  <div class="ui-g-4">Col1</div>
+  <div class="ui-g-4">Col2</div>
+  <div class="ui-g-4">Col3</div>
+</div>
+
+
+<p-dataTable [value]="cars">
+  <p-column field="vin" header="Vin"></p-column>
+  <p-column field="year" header="Year"></p-column>
+  <p-column field="brand" header="Brand"></p-column>
+  <p-column field="color" header="Color"></p-column>
+</p-dataTable>
