--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   {{title}}
 </h1>
 
-<button pButton type="button" label="Click"></button>
+<button pButton type="button" label="Click" style="color:#555"></button>
 
 <div class="ui-g">
   <div class="ui-g-4">Col1</div>
