--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
 
+@charset "utf-8";
+
+@import '../node_modules/primeng/resources/primeng.min.css';
+@import '../node_modules/primeng/resources/themes/omega/theme.css';
+@import '../node_modules/font-awesome/css/font-awesome.min.css';
+
+@import 'styles/variables';
+@import '../node_modules/bootstrap/scss/bootstrap';
+
+html {
+  font-size: $font-size-root !important;
+  min-height: 100%;
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  min-height: 100%;
+  height: 100%;
+}
+
+.ui-widget {
+  font-family: $font-family-sans-serif !important;
+  font-size: $font-size-root !important;
+}
+
+.row {
+  margin-bottom: 3px;
+}
