--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -11,3 +11,6 @@ $font-size-root: 14px;
 $font-family-serif:$font-family-sans-serif;
 $font-family-monospace:$font-family-sans-serif;
 // $icon-font-path: '../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
+
+$corporate-color: #2196F3;
+$font-color: #FFFFFF;
